cluster/apps/default/smokeping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  annotations:
    configmap.reloader.stakater.com/reload: "smokeping-config"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: smokeping
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smokeping
    spec:
      containers:
      - name: smokeping
        image: lscr.io/linuxserver/smokeping:2.7.3 # {"$imagepolicy": "flux-system:smokeping"}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /smokeping/
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /smokeping/
            port: 80
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config/Targets
          subPath: Targets
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: smokeping-data
      - name: config-volume
        configMap:
          name: smokeping-config
