cluster/apps/default/smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: smokeping
