cluster/apps/default/smokeping/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smokeping
spec:
  rules:
    - host: smokeping.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: smokeping
                port:
                  number: 80
  tls:
    - hosts:
        - smokeping.${SECRET_PUBLIC_DOMAIN}
